# triton_acc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/docker/: build.Dockerfile
.github/workflows/: build.yml  containers.yml  lint.yml  wheels.yml
backend/: compiler.py  driver.py
include/: CMakeLists.txt
include/triton_acc/Conversion/: CMakeLists.txt  Passes.h  Passes.td
lib/Conversion/: CMakeLists.txt
lib/Conversion/TritonToTritonAcc/: Pass.cpp
python/: CMakeLists.txt  triton_acc.cc
